Initial crack at template rendering.

--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   "dependencies": {
     "pkginfo": "0.2.x",
     "commander": "1.x.x",
-    "ssh2": "0.1.x",
     "async": "0.1.x",
+    "ssh2": "0.1.x",
+    "ejs": "0.8.x",
     "debug": "0.7.x"
   },
   "devDependencies": {
