--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     }
   ],
   "main": "./lib",
+  "bin" : {
+    "tensile" : "./bin/tensile.js"
+  },
   "dependencies": {
     "pkginfo": "0.2.x",
     "commander": "1.x.x",
@@ -40,7 +43,7 @@
   },
   "devDependencies": {
     "mocha": "1.x.x",
-    "should": "1.x.x"
+    "chai": "1.x.x"
   },
   "engines": {
     "node": ">= 0.6.0"
