--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pkginfo": "0.2.x",
     "commander": "1.x.x",
     "bootable": "0.2.x",
+    "ini": "1.x.x",
     "async": "0.1.x",
     "ssh2": "0.1.x",
     "ejs": "0.8.x",
